# Browser-tasks-trial-Est

./: .gitignore  BROWSER_ARCHITECTURE.md  COMPLETION_SUMMARY.md  DIAGNOSE_ISSUES.md  INSTALLATION.md  PLATFORM_BUILD.md  QUICKSTART.md  README.md  SAFE_RECOVERY.md  UPDATES.md  index.html  package-lock.json  package.json  setup-and-build.ps1  setup-and-build.sh  todo.md
.cross-platform/: build.ps1  build.sh
.wasm-bindings/src/: lib.rs
public/: background.js  background.ts  content.js  content.ts  manifest.json  options.html
rust-browser/: Cargo.toml  build.rs
rust-browser/src/: engine.rs  lib.rs  memory.rs  navigation.rs  tab.rs
src/: index.css  options.tsx
src/components/: TrailBrowser.tsx
src/components/browser/: AddressBar.tsx  BrowserView.tsx  BrowserWindow.tsx  TabBar.tsx
src/components/ui/: alert.tsx  button.tsx
src/core/engine/: EngineFactory.ts  ServoEngine.ts  WebKitEngine.ts  types.ts
src/hooks/: use-mobile.tsx  useBrowser.ts
src/pages/: Index.tsx
src/services/: BrowserService.ts  RustBrowserService.ts
src/utils/: security.ts
utils/: tabs.ts
