[package]
name = "rust-browser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Core browser engine - Servo components for minimal memory
# servo = { git = "https://github.com/servo/servo", optional = true }

# Memory-efficient async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macos", "net"] }

# Memory-efficient serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Memory pool for efficient allocations
bumpalo = "3.14"

# Zero-copy string handling
bytes = "1.5"

# Efficient collections
ahash = "0.8"  # Fast hashing
dashmap = "5.5"  # Concurrent HashMap with lower memory overhead

# Random number generation
rand = "0.8"

# Async trait support
async-trait = "0.1"

# Platform-specific
[target.'cfg(target_os = "android")'.dependencies]
android-activity = "0.5"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"

# WASM target for web
[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"

[features]
default = []
desktop = []
servo-engine = []
webkit-engine = []

[profile.release]
opt-level = "z"  # Optimize for size
lto = true  # Link-time optimization
codegen-units = 1  # Better optimization
strip = true  # Strip symbols
panic = "abort"  # Smaller binary

[profile.dev]
opt-level = 0
debug = true
